# lox

./: Cargo.toml  code.lox  miri_test.sh
crates/lox/: Cargo.toml
crates/lox/src/: chunk.rs  compiler.rs  lib.rs  main.rs  scanner.rs  value.rs  vm.rs
src/: chunk.rs  compiler.rs  hash_table.rs  heap.rs  lib.rs  main.rs  scanner.rs  value.rs  vm.rs
src/heap/: allocator.rs  hash_table.rs  mod.rs  vec.rs
src/memory/: allocator.rs  hash_table.rs  mod.rs  vec.rs
tests/: arithmetic.rs  blocks.rs  comparison.rs  errors.rs  globals.rs  locals.rs  official_tests.rs  statements.rs  strings.rs
tests/lox/: README.md
