[package]
name = "lox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
arrayvec = "0.7.2"
clap = { version = "4.1.3", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
num_enum = "0.5.7"
thiserror = "1.0.38"
unicode-segmentation = "1.10.0"
